prevent overflow x

--- a/nft-teleporter/src/index.css
+++ b/nft-teleporter/src/index.css
@@ -26,6 +26,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #000000;
+  overflow-x: hidden;
 }
 
 p {
